# cmake_config

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
arr/: CMakeLists.txt  arr.c  arr.h
cmake/: addsubmodule.cmake  compilerwarnings.cmake
config/: CMakeLists.txt  template_header.h.in
docs/: Doxyfile
src/: CMakeLists.txt  main.c
sum/lib/: CMakeLists.txt  sum.c
